[package]
name = "webpoke"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
log = "0.4.22"
rustdns = "0.4.0"
rustls = { version ="0.23.10", features = ["logging"] }
serde = "1.0.203"
serde_derive = "1.0.203"
serde_yaml = "0.9.34"
uuid = { version = "1.10.0", features = [ "v4" ] }
webpki-roots = "0.26.3"

[dev-dependencies]
env_logger = "0.11.3"
